?? Nov 2005, PHP 5.1
- Fixed initializing and argument checking for posix_mknod(). (Derick)
- Fixed bugs #35022, #35019 (Regression in the behavior of key() and current()
  functions). (Ilia)
- Fixed bug #35017 (Exception thrown in error handler may cause unexpected
  behavior). (Dmitry)
- Fixed bug #35014 (array_product() always returns 0). (Ilia)

28 Oct 2005, PHP 5.1 Release Candidate 4
- Fixed fgetcsv() and fputcsv() inconsistency. (Dmitry)
- Fixed bug #34996 (ImageTrueColorToPalette() crashes when ncolors is 
  zero). (Tony)
- Fixed bug #34982 (array_walk_recursive() modifies elements outside function
  scope). (Dmitry)
- Fixed bug #34977 (Compile failure on MacOSX due to use of varargs.h). (Tony)
- Fixed bug #34968 (bz2 extension fails on to build on some win32 setups).
  (Ilia)
- Fixed bug #34965 (tidy is not binary safe). (Mike)
- Fixed bug #34957 (PHP doesn't respect ACLs for access checks). (Wez)
- Fixed bug #34950 (Unable to get WSDL through proxy). (Dmitry)
- Fixed bug #34938 (dns_get_record() doesn't resolve long hostnames and 
  leaks). (Tony)
- Fixed bug #34905 (Digest authentication does not work with Apache 1). (Ilia)
- Fixed bug #34902 (mysqli::character_set_name() - undefined method). (Tony)
- Fixed bug #34893 (PHP5.1 overloading, Cannot access private property).
  (Dmitry)
- Fixed bug #34899 (Fixed sqlite extension compile failure). (Ilia)
- Fixed bug #34879 (str_replace, array_map corrupt negative array indexes on
  64-bit platforms). (Dmitry)
- Fixed bug #34821 (zlib encoders fail on widely varying binary data on windows)
  (Mike, Ilia)
- Fixed bug #34782 (token_get_all() gives wrong result). (Dmitry)
- Fixed bug #34767 (Zend Engine 1 Compatibility not copying objects correctly).
  (Dmitry)
- Fixed bug #34725 (CLI segmentation faults during cleanup). (Dmitry)
- Fixed bug #34712 (zend.ze1_compatibility_mode = on segfault). (Dmitry)
- Fixed bug #34623 (Crash in pdo_mysql on longtext fields). (Ilia)